welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: value ==- is not a member of Int
  if (nums(0)==12 && nums(1)==-9)
                            ^